fixed category description scrollbar bug

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -27,6 +27,7 @@ nav.navbar{
 
 .no-min-width .ql-editor{
   min-height: 0px !important;
+  overflow-y: hidden;
 }
 
 .ql-toolbar.ql-snow{
